fix collapse menu

--- a/assets/styles/dropdown.css
+++ b/assets/styles/dropdown.css
@@ -27,6 +27,7 @@
 
 #page-content {
     padding: 20px;
+    margin: 0px;
 }
 
 nav ul { 
